# killscriptblinds

./: README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
killscriptblinds/: __init__ .py  async_motion_blinds.py  motion_blinds.py
src/: async_motion_blinds.py  motion_blinds.py
